# sllm

./: CHANGELOG.md  README.md  SUMD.md  SUMR.md  app.doql.less  goal.yaml  project.sh  pyproject.toml  tree.txt
docs/clients/: aider-docker-autoloop.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
src/sllm/: compat.py  validation.py
tests/: test_sillm.py  test_sllm.py
