[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tillm"
version = "0.1.30"
description = "Shell LLM client control plane for semcod/coru automation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Semcod" }, { name = "Tom Sapletta", email = "tom@sapletta.com" }]
license = "Apache-2.0"
keywords = ["llm", "shell", "aider", "claude", "codex", "automation"]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.0,<2.0",
    "pytest>=8.0,<10.0",
    "ruff>=0.11,<0.16",
    "twine>=6.0,<7.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "testql>=1.2.0",
]

[project.scripts]
sillm = "sillm.cli:main"
sllm = "sillm.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sillm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/deep/deep-v4-pro"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/deep/deep-v4-pro"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
